tests/macros/select/mask.stderr
error: option `mask` does not exist for kind `select`
 --> $DIR/mask.rs:2:44
  |
2 |     let q = requestty::questions![Select { mask: todo!() }];
  |                                            ^^^^
