tests/macros/select/mask.rs
fn main() {
    let q = requestty::questions![Select { mask: todo!() }];
}
